# manifolds

./: Plot_paper.m  Plot_paper_kth.m  Plot_paper_kth_shifts_hor_ver.m  Plot_paper_kth_shifts_hor_ver_2.m  Plot_paper_kth_ucf_shifts.m  Plot_paper_kth_ucf_shifts_II.m  Plot_paper_kth_ucf_ut_scales.m  Plot_paper_kth_ucf_ut_scales_II.m  Plot_paper_kth_ucf_ut_shifts.m  Plot_paper_scales_extra_experiments.m  Plot_paper_shifts_extra_experiments.m  Plot_paper_ucf.m  README.md  plot_Proj_Poly_I.m  plot_Proj_Poly_II.m  plot_Proj_Rbf_I.m  plot_Proj_rbf_II.m
kth/dim_12_no_xy/classification/: CMakeLists.txt  Dim12_onesegNN_kth_Grassmann_varying_p.m  kth-classification-onematrix-video.cpp  kth-cross-validation-one-impl.hpp
kth/dim_12_no_xy/features/: features-kth.cpp  optflow-feat-impl.hpp
kth/dim_14/FV_SPD/: CMakeLists.txt  FV_kth_all_videos.m  FV_kth_all_videos_mltipleSPD.m  compute_fisher_joha.m  getVecSPDGMM-def.hpp  getVecSPDGMM-impl.hpp  main_kth.m  main_kth_multipleSPD.m  vec_SPD_GMM.cpp
kth/dim_14/classification_CovsMeans_spd_NN/: CMakeLists.txt  kth-cross-validation-def.hpp  kth-cross-validation-impl.hpp
ucf_sports/dim_12/classification/2-Distance Vectors/: CMakeLists.txt  GrassPM-cross-validation-impl.hpp  Plotting_Dist_Vectors.m  ucf-dist_vectors.cpp
ucf_sports/dim_14/cov_matrices/: CMakeLists.txt  cov-mat-def.hpp  cov-mat-impl.hpp  ucf-sport-cov-mat.cpp
ut_tower/classification/: performance_kernels_ucf.m
ut_tower/cov_matrices/: CMakeLists.txt  cov-mat-def.hpp  cov-mat-impl.hpp  ut-tower-cov-mat.cpp
ut_tower/features/: CMakeLists.txt  actionNames.txt  features.cpp  optflow-feat-def.hpp  optflow-feat-impl.hpp
ut_tower/grass_points/: grass-def.hpp  grass-impl.hpp  main-grass-points.cpp
ut_tower/sort_dataset/: CMakeLists.txt  actionNames.txt  bbox_data.h5  ut_tower.cpp
(+212 files in other folders)
