cmake_minimum_required(VERSION 2.8)
project(v1)
#set(CMAKE_BUILD_TYPE Release)
find_package( OpenCV REQUIRED)
find_package( Armadillo REQUIRED)
find_package (HDF5)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2 -Wall -pedantic -fopenmp")
add_executable( run-one-cov.exe ucf-sport-cov-mat.cpp)
target_link_libraries( run-one-cov.exe ${OpenCV_LIBS} -larmadillo -lhdf5)
